force-app/main/default/objects/ccrz__E_RuleTargetSKU__c/ccrz__E_RuleTargetSKU__c.object-meta.xml
<CustomObject>
    <label>CC Rule Target SKU</label>
    <nameField>
        <label>Rule Target SKU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Rule Target SKUs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>