force-app/main/default/objects/ccrz__E_RuleTargetSKU__c/fields/ccrz__Product__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>Rule Target SKUs</relationshipLabel>
    <relationshipName>E_RuleTargetSKUs</relationshipName>
    <type>Lookup</type>
</CustomField>