force-app/main/default/objects/ccrz__E_RuleTargetSKU__c/fields/ccrz__RuleTargetSKUId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RuleTargetSKUId__c</fullName>
    <externalId>true</externalId>
    <label>Rule Target SKU Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>